added more knowledge
added more knowledge